# lefusion-slicer

./: .gitignore  README.md  citation.cff  nb-testing-slicer-lf.ipynb
server/: environment.yml  pyproject.toml  requirements-jupyter.txt  requirements.txt  server.py
server/LeFusion_LIDC/: inferenc-workingplco.sh  paths.py
server/LeFusion_LIDC/dataset/: __init__.py  lidc_hist_3d_in_slicer.py
server/LeFusion_LIDC/get_dataset/: get_dataset.py
server/LeFusion_LIDC/test/: inference.py
server/LeFusion_LIDC/test/confs/: infer.yaml
server/lefusion/: paths.py  train-workingplco.sh
server/lefusion/dataset/: lidc_hist_3d.py  lidc_hist_3d_in_slicer.py
server/lefusion/ddpm/: diffusion.py  unet.py
server/lefusion/lidc-idri-processing/: prepare_dataset.py
server/lefusion/lidc-idri-processing/confs/: lidc-1iso-64x64x32.yaml
server/lefusion/test/: inference.py
slicer/LeFusion/: CMakeLists.txt
slicer/LeFusion/LeFusion/: CMakeLists.txt  LeFusion.py
slicer/LeFusion/LeFusion/Resources/UI/: LeFusion.ui
