
[tool.poetry]
name = "lefusion"
version = "1.0.0"
description = "Package to run the LeFusion model training and inference. Inlcudes data wrangling fetaures."
authors = ["P. Osorio <pedro.osorio1@bayer.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
